@@ -1,3 +1,8 @@
+2011-11-12  Iain Sandoe  <iains@gcc.gnu.org>
+
+	* objc-next-runtime-abi-01.c (objc_eh_personality): Use gcc personality
+	for Objective-C m32.
+
 2011-10-29  Iain Sandoe  <iains@gcc.gnu.org>
 
 	PR target/47997
